@@ -1,4 +1,9 @@
-﻿w17 25.06.2014 00:16:56 +0400 - build 3962
+﻿svs 25.06.2014 11:17:19 +0400 - build 3963
+
+1. Mantis#0002692: Невозможно прервать операцию, если она запущена из макроса
+   Закомметим и посмотрим.
+
+w17 25.06.2014 00:16:56 +0400 - build 3962
 
 1. Уточнение 3960.
 
